2006-05-06  Shawn Betts  <sabetts@vcn.bc.ca>

	* input.lisp (*input-map*): use DEL to refer to the backspace
	key. New binding, Delete. use RET to refer to the return key.
	(input-self-insert): report an error if the keysym is not associated with a character

	* user.lisp (*root-map*): use SPC to refer to the space key

	* stumpwm.asd (:stumpwm): add keysyms and keytrans files and dependancies

	* primitives.lisp (char->keysym): call keysym-name->keysym
	(is-modifier): use keysym names

	* kmap.lisp (key): replace char slot with keysym. all callers updated.
	(parse-char-name): remove function
	(parse-key): call stumpwm-name->keysym 
	(print-key): call keysym->keysym-name

2006-05-02  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (pull-window-by-number): set the pulled window's
	frame's window to null before raising the frame's new window.
	("only"): new command
	(*root-map*): bind "Q" to "only"

2006-04-29  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (font-exists-p): new function
	(set-font): verify that the font exists first

	* package.lisp (:stumpwm): export #:set-border-color

	* core.lisp (set-fg-color): return nil if the color doesn't exist.
	(set-bg-color): likewise
	(set-border-color): likewise
	(color-exists-p): new function

2006-04-28  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp (*root-map*): bind - to fclear
	(other-window): choose the right window when the frame is empty
	(clear-frame): new function
	("fclear"): new command

	* core.lisp (maybe-hide-window): hide the window if new-window is nil
	(frame-raise-window): if w is nil clear the frame

2006-04-27  Shawn Betts  <sabetts@vcn.bc.ca>

	* user.lisp ("quit"): new command

	* stumpwm.lisp (stumpwm-internal-loop): catch a :quit tag

2006-04-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (handle-rp-commands): convert the response string using map.

	* primitives.lisp (format-expand): unknown % formatters are printed verbatim.

	* core.lisp (window-name): call xlib:wm-name